<resources>
    <!-- Landing Page -->
    <string name="loginBanner">Login banner.</string>
    <string name="registerBanner">Register banner.</string>
    <string name="loginDescription">Please login to your Account!</string>
    <string name="registerDescription">Register and be the best story teller :D</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="createAccount">Don\'t have an account?</string>
    <string name="invalidCredential">"Please enter your valid credential!"</string>
    <string name="invalidEmail">Please enter a correct email!</string>
    <string name="invalidPassword">Password should contains at least 8 characters!</string>
    <string name="invalidName">Name should contains at least 3 characters!</string>
    <string name="alreadyHaveAccount">Already have an account?</string>
    <string name="signUpButton"><u>Sign up Now!</u></string>
    <string name="signInButton"><u>Sign in now!</u></string>
    <string name="signUp">Sign Up</string>

    <!-- Homepage -->
    <string name="appName">MyStory</string>
    <string name="logout">Logout</string>
    <string name="author">Akmal</string>
    <string name="description">Description Text.</string>
    <string name="storyButton">Add</string>
    <string name="fetchFail">Failed to get story, please try again!</string>
    <string name="systemFailure">There was an error occurred. Please try again.</string>
    <string name="imageDescription">Image View Holder</string>

    <!-- Story Page -->
    <string name="descriptionField">Write Description of your image here!</string>
    <string name="permissionDenied">Permission Denied!</string>
    <string name="uploadFailed">Upload failed, check your connection and try again!</string>
    <string name="uploadSuccess">Upload successful, enjoy your story :D</string>
    <string name="imageStory">Banner Story</string>
    <string name="galleryButton">Gallery</string>
    <string name="uploadButton">Upload</string>
    <string name="cameraButton">Camera</string>

    <!-- Fragment -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Maps Activity -->
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="retry">Retry</string>
    <string name="mapsTittle">MapsActivity</string>
    <string name="locationUnknown">Location not found, please try again!</string>
    <string name="getLocation">Get Location</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>